Fix z-index for headers

--- a/src/components/GeoInput/styles.css
+++ b/src/components/GeoInput/styles.css
@@ -16,6 +16,7 @@
         display: flex;
         position: relative;
         flex-grow: 1;
+        z-index: 0;
         margin: 0 var(--spacing-small);
 
         .floating {
