--- a/src/views/Entry/EntryForm/styles.css
+++ b/src/views/Entry/EntryForm/styles.css
@@ -20,6 +20,7 @@
 
     .content {
         display: flex;
+        position: relative;
         flex-direction: column;
         flex-grow: 1;
         overflow: auto;
